data/derived/fa15/progs/unify/prog2193.ml.out
Characters 152-156:
  in wwhile(gs b, b);;
            ^^^^
Error: This expression has type 'a * bool
       but an expression was expected of type 'b -> 'b * bool
